--- a/info.yaml
+++ b/info.yaml
@@ -1,19 +1,16 @@
 ---
 project:
-  description: "A template SoC for Google sponsored Open MPW shuttles for SKY130."
+  description: "Cryptography accelerator and some experimental logic blocks"
   foundry: "SkyWater"
-  git_url: "https://github.com/efabless/caravel_project_example.git"
-  organization: "Efabless"
-  organization_url: "http://efabless.com"
-  owner: "Tim Edwards"
+  git_url: "https://github.com/asinghani/crypto-accelerator-chip-v2.git"
+  organization: "asinghani"
+  organization_url: "https://github.com/asinghani"
+  owner: "Anish Singhani"
   process: "SKY130"
-  project_name: "Caravel"
+  project_name: "crypto-accelerator-chip-v2"
   project_id: "00000000"
   tags:
     - "Open MPW"
-    - "Test Harness"
-  category: "Test Harness"
   top_level_netlist: "caravel/verilog/gl/caravel.v"
   user_level_netlist: "verilog/gl/user_project_wrapper.v"
   version: "1.00"
-  cover_image: "docs/source/_static/caravel_harness.png"
